--- a/KnowItAll/HomePage.storyboard
+++ b/KnowItAll/HomePage.storyboard
@@ -224,6 +224,7 @@
                                                     <rect key="frame" x="8" y="69" width="120" height="20"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="B0m-DM-SGq"/>
                                                         <constraint firstAttribute="height" constant="20" id="DFf-KC-PVu"/>
                                                     </constraints>
                                                 </view>
