--- a/KnowItAll/ReviewPage.storyboard
+++ b/KnowItAll/ReviewPage.storyboard
@@ -58,20 +58,23 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="120" id="d7e-T6-6XT"/>
                                             </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
+                                            </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G4P-nq-Vva">
                                             <rect key="frame" x="0.0" y="130" width="375" height="10"/>
                                             <subviews>
                                                 <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hf8-6V-Nws">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="z7r-A4-k4w"/>
                                                     </constraints>
                                                 </view>
                                                 <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uah-KX-sDx">
                                                     <rect key="frame" x="0.0" y="10" width="375" height="1"/>
-                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="Iwp-re-WeB"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="ijk-mT-dJ7"/>
