--- a/KnowItAll/Search.storyboard
+++ b/KnowItAll/Search.storyboard
@@ -9,6 +9,11 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="oo7-fh-8tC">
@@ -265,6 +270,7 @@
                     <navigationItem key="navigationItem" id="NMV-D4-7Yz"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="noResultsView" destination="UFh-K6-SNa" id="Tug-rm-rZu"/>
                         <outlet property="searchBar" destination="OOP-Lg-5Z5" id="iS8-Ws-pG3"/>
                         <outlet property="tableView" destination="sFq-pZ-aId" id="E6t-xF-pJK"/>
                         <segue destination="eq0-rA-Cg9" kind="show" identifier="showReviewPage" id="hOk-Jm-Zxe"/>
@@ -272,6 +278,23 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GL4-Qg-WRW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="UFh-K6-SNa">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Results Found" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azg-KK-5zV">
+                            <rect key="frame" x="52" y="20" width="138" height="23.5"/>
+                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="Azg-KK-5zV" firstAttribute="centerX" secondItem="UFh-K6-SNa" secondAttribute="centerX" id="E7Y-kA-3To"/>
+                        <constraint firstItem="Azg-KK-5zV" firstAttribute="top" secondItem="UFh-K6-SNa" secondAttribute="top" constant="20" id="v3f-cx-gld"/>
+                    </constraints>
+                </view>
             </objects>
             <point key="canvasLocation" x="-372" y="819.94002998500753"/>
         </scene>
